# vision-forge-api

./: .gitignore  .pre-commit-config.yaml  DOCKERHUB_OVERVIEW.md  README.md  ci-di.md  debug_predict.py  debug_scores.py  mypy.ini  prompt.md  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  docker-smoke.yml  published-docker-test.yml
config/: README.md  auth.yaml  profiles.yaml  prompts.yaml  settings.yaml  tag_sets.yaml
docker/: Dockerfile
scripts/: bundle_model.py  docker_smoke_test.py  download_model.py  precompute_embeddings.py  test_embeddings.py  validate_config.py
scripts/ci/: check_versions.py  compute_docker_tags.py
src/vision_forge_api/api/: app.py  context.py  context_builder.py  errors.py
src/vision_forge_api/api/routers/: admin.py  catalog.py  health.py  predict.py  predict_jobs.py
src/vision_forge_api/api/services/: __init__.py  admin.py  predict.py  predict_jobs.py
src/vision_forge_api/auth/: __init__.py  cache.py  deps.py  models.py
src/vision_forge_api/catalog/: __init__.py  service.py
src/vision_forge_api/config/: loader.py  schema.py
src/vision_forge_api/embeddings/: __init__.py  store.py
src/vision_forge_api/predict/: service.py
src/vision_forge_api/siglip/: service.py
test-results/: coverage.xml
tests/: conftest.py  test_admin_service.py  test_api_integration.py  test_api_surface.py  test_auth_and_errors_integration.py  test_auth_embeddings_siglip.py  test_config_catalog_main_context.py  test_docker_smoke_test.py  test_predict_jobs_router.py  test_predict_jobs_service.py  test_prediction_service.py  test_prediction_service_internals.py
